--- a/led_controller/Dockerfile
+++ b/led_controller/Dockerfile
@@ -1,11 +1,16 @@
 # Build c lib in raspbian image first
-FROM resin/rpi-raspbian
+FROM resin/rpi-raspbian as builder
 
 # Install apt dependencies
 RUN apt-get update && apt-get install -y \
                     git \
                     scons \
-                    swig
+                    swig \
+                    gcc \
+                    avr-libc \
+                    g++ \
+                    libc-dev \
+                    make
 
 # Build Neopixel C Library
 RUN git clone https://github.com/jgarff/rpi_ws281x.git
@@ -16,8 +21,13 @@ RUN scons
 # Switch to python lib so we don't store extra apt libs
 FROM hypriot/rpi-python
 
+RUN apt-get update && apt-get install -y \
+                    swig \
+                    gcc
+
+RUN mkdir rpi_ws281x
 # Copy from other image
-COPY --from=0 /rpi_ws281x .
+COPY --from=builder /rpi_ws281x /rpi_ws281x
 # Build and install python Neopixel lib
 WORKDIR /rpi_ws281x/python
 RUN python setup.py build && python setup.py install
