ansible new wifi network and more tags

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -3,7 +3,7 @@
   become: yes
   user: pi
   roles:
-    - { role: wifi, tags: ['pi_setup'] }
+    - { role: wifi, tags: ['pi_setup', 'wifi'] }
     - { role: docker, tags: ['pi_setup', 'docker'] }
     - { role: neopixels, tags: ['code'] }
-    - { role: ssh_setup, tags: ['pi_setup'] }
+    - { role: ssh_setup, tags: ['pi_setup', 'ssh'] }
