--- a/ansible/roles/wifi/templates/wpa_supplicant.conf
+++ b/ansible/roles/wifi/templates/wpa_supplicant.conf
@@ -18,16 +18,16 @@ network={
         identity="{{ network.identity }}"
 {% endif %}
 {% if network.password is defined %}
-{% if network.key_mgmt == "WPA" or network.key_mgmt == "WPA2" %}
-{% for wpa_passphrase in ENCRYPTED_WIFI_PASSWORDS.results %}
-{% if wpa_passphrase.item.ssid == network.ssid %}
-        {{ wpa_passphrase.stdout | regex_search('psk=[a-z0-9]+') }}
-{% endif %}
-{% endfor %}
-{% else %}
+{% if network.key_mgmt is defined and network.key_mgmt == "WPA-EAP" %}
 {% for wpa_passphrase in ENCRYPTED_WIFI_ENTERPRISE_PASSWORDS.results %}
 {% if wpa_passphrase.item.ssid == network.ssid %}
         {{ wpa_passphrase.stdout | regex_replace('\(stdin\)= ', 'password=hash:') }}
+{% endif %}
+{% endfor %}
+{% else %}
+{% for wpa_passphrase in ENCRYPTED_WIFI_PASSWORDS.results %}
+{% if wpa_passphrase.item.ssid == network.ssid %}
+        {{ wpa_passphrase.stdout | regex_search('psk=[a-z0-9]+') }}
 {% endif %}
 {% endfor %}
 {% endif %}
