--- a/led_controller/Dockerfile
+++ b/led_controller/Dockerfile
@@ -19,21 +19,19 @@ RUN scons
 
 
 # Switch to python lib so we don't store extra apt libs
-FROM hypriot/rpi-python
+FROM t0rx/rpi-python3.6
 
-RUN apt-get update && apt-get install -y \
-                    swig \
-                    gcc
+RUN apt-get update && apt-get install -y swig
 
 RUN mkdir rpi_ws281x
 # Copy from other image
 COPY --from=builder /rpi_ws281x /rpi_ws281x
 # Build and install python Neopixel lib
 WORKDIR /rpi_ws281x/python
-RUN python setup.py build && python setup.py install
+RUN python3.6 setup.py build && python3.6 setup.py install
 
 # Switch back to / for working dir
 WORKDIR /
 COPY led_test.py .
 #RUN rm -rf /rpi_ws281x
-CMD ["python", "led_test.py", "-c"]
+CMD ["python3.6", "led_test.py", "-c"]
