Switch led_frontend to use http.server
Not really any reason to use a python file for this

--- a/led_frontend/Dockerfile
+++ b/led_frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM t0rx/rpi-python3.6
 
-COPY server.py .
 COPY www_data ./www_data
 
-CMD ["python3.6", "server.py"]
+WORKDIR ./www_data
+CMD ["python3.6", "-m", "http.server", "20000"]
