Start of led_api

--- a/ansible/roles/neopixels/tasks/main.yml
+++ b/ansible/roles/neopixels/tasks/main.yml
@@ -15,8 +15,8 @@
     owner: pi
     group: pi
   with_items:
-    - docs
     - docker-compose.yml
+    - led_api
     - led_controller
     - led_frontend
     - nginx
