--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,10 +11,16 @@ server {
     ssl_certificate     compiled.crt;
     ssl_certificate_key compiled.pem;
 
-    location / {
+    location = / {
         auth_basic "Hello world";
         auth_basic_user_file htpasswd;
 
         proxy_pass http://led_frontend:20000;
+    }
+    location /api {
+        auth_basic "api";
+        auth_basic_user_file htpasswd;
+
+        proxy_pass http://led_api:20001;
     }
 }
