--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,19 +8,21 @@ server {
 server {
     listen 443 ssl default_server;
 
+    resolver 127.0.0.11 ipv6=off;
+
     ssl_certificate     compiled.crt;
     ssl_certificate_key compiled.pem;
 
-    location = / {
+    location / {
         auth_basic "Hello world";
         auth_basic_user_file htpasswd;
 
         proxy_pass http://led_frontend:20000;
     }
-    location /api {
+    location ~* /api/?(?<apicall>.*) {
         auth_basic "api";
         auth_basic_user_file htpasswd;
 
-        proxy_pass http://led_api:20001;
+        proxy_pass http://led_api:20001/$apicall;
     }
 }
