--- a/ansible/roles/wifi/templates/wpa_supplicant.conf
+++ b/ansible/roles/wifi/templates/wpa_supplicant.conf
@@ -38,5 +38,8 @@ network={
 {% if network.phase2 is defined %}
         phase2="{{ network.phase2 }}"
 {% endif %}
+{% if network.priority is defined %}
+        priority={{ network.priority }}
+{% endif %}
 }
 {% endfor %}
